Fixing whitespace in chrome issue
Fixing the untils--hidden overflow value due to Chrome rendering blank white space in specific use case. Changed from initial to hidden

--- a/University/Admin assets/CSS/build-uhi-main.css
+++ b/University/Admin assets/CSS/build-uhi-main.css
@@ -4509,7 +4509,7 @@ https://cloudfour.com/thinks/see-no-evil-hidden-content-and-accessibility/
   clip: rect(0 0 0 0);
   height: 1px;
   margin: -1px;
-  overflow: initial;
+  overflow: hidden;
   padding: 0;
   position: absolute;
   width: 1px;
